style.css
@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,600');
* {
	outline: none !important;
}

html {
	scroll-behavior: smooth;
}

body {
	font-family: 'Poppins', sans-serif;
}

header {
	position: relative;
	z-index: 1000;
}

p {
	font-size: 1.15rem;
}

.navbar {
	background: #000 !important;
}

.navbar-light .navbar-nav .nav-link {
	color: rgba(255, 255, 255, .8);
}

.navbar-light .navbar-nav .nav-link:hover {
	background: white;
}

.banner {
	position: relative;
	top: 0;
	width: 100%;
	height: 100vh;
	background: url(img/banner.jpg);
	background-size: cover;
	margin-bottom: 0;
}

.banner:before,
.sec2:before,
.contact:before {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 400px;
	background: -webkit-gradient(linear, left top, left bottom, from(#000), to(transparent));
	background: -webkit-linear-gradient(#000, transparent);
	background: -o-linear-gradient(#000, transparent);
	background: linear-gradient(#000, transparent);
	pointer-events: none;
}

.banner:after,
.sec2:after,
.contact:after {
	content: '';
	position: absolute;
	bottom: 0;
	left: 0;
	width: 100%;
	height: 400px;
	background: -webkit-gradient(linear, left bottom, left top, from(#000), to(transparent));
	background: -webkit-linear-gradient(bottom, #000, transparent);
	background: -o-linear-gradient(bottom, #000, transparent);
	background: linear-gradient(360deg, #000, transparent);
	pointer-events: none;
}

.height100p {
	height: 100vh;
}

.h100 {
	height: 100%;
}

.contentBox {
	position: relative;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-pack: center;
	    -ms-flex-pack: center;
	        justify-content: center;
	-webkit-box-align: center;
	    -ms-flex-align: center;
	        align-items: center;
	text-align: center;
	z-index: 10;
}

.contentBox h1 {
	font-weight: 600;
	color: #fff;
	text-transform: uppercase;
	font-size: 4rem;
}

.contentBox p {
	color: #fff;
	font-size: 1.3rem;
}

.sec1 {
	padding: 100px 0;
	background: #000;
}

.headerText {
	color: #fff;
}

.headerText h2 {
	font-size: 2.5rem;
	margin-bottom: 20px;
}

.placeBox {
	position: relative;
	max-width: 300px;
	height: 400px;
	margin: 0 auto;
	background: #000;
	margin-top: 30px;
}

.placeBox .imgBx {
	width: 100%;
	height: 100%;
}

.placeBox .imgBx img {
	-o-object-fit: cover;
	   object-fit: cover;
	width: 100%;
	height: 100%;
}

.placeBox .content {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-pack: baseline;
	    -ms-flex-pack: baseline;
	        justify-content: baseline;
	-webkit-box-align: end;
	    -ms-flex-align: end;
	        align-items: flex-end;
}

.placeBox .content h3 {
	position: relative;
	margin: 0;
	padding: 10px;
	background: rgba(0, 0, 0, .95);
	color: #fff;
	font-size: 20px;
	font-weight: 600;
	width: 100%;
	text-align: center;
}

.placeBox .content h3 span {
	font-size: 16px;
	font-weight: 500;
}

.sec2 {
	position: relative;
	background: url(img/banner2.jpg);
	background-size: cover;
	height: 100vh;
}

.sec2 h2 {
	font-weight: 600;
	color: #fff;
	text-transform: uppercase;
	font-size: 4.5rem;
}

.btnD1 {
	border: 2px solid #fff;
	color: #000;
	background: #fff;
	border-radius: 50px;
	padding: 15px 50px;
	font-size: 1.15rem;
	outline: none;
	font-weight: 500;
	margin-top: 20px;
}

.blog {
	position: relative;
	padding: 100px 0;
	background: #000;
}

.blogpost {
	position: relative;
	width: 100%;
	margin: 30px 0 20px;
	background: #fff;
}

.blogpost .imgBx {
	height: 400px;
}

.blogpost .imgBx img {
	width: 100%;
	height: 100%;
	-o-object-fit: cover;
	   object-fit: cover;
}

.blogpost .content {
	padding: 15px;
}

.blogpost .content h1 {
	margin: 0;
	padding: 0 0 10px;
	font-weight: 600;
	font-size: 1.5rem;
}

.btnD2,
.btnD2:hover {
	background: #262626;
	color: #fff;
	border-radius: 30px;
	padding: 10px 20px;
	float: right;
}

.contact {
	position: relative;
	padding: 100px 0;
	background: url(img/contactBg.jpg);
	background-size: cover;
	min-height: 100vh;
}

.contact form {
	position: relative;
	z-index: 1000;
}

.contact .form-control {
	background: transparent;
	border: none;
	border-bottom: 2px solid rgba(255, 255, 255, .2);
	height: 50px;
	border-radius: 0;
	background: rgba(0, 0, 0, .6);
	color: #fff;
	font-size: 1.25rem;
}

.contact .form-control:focus,
.contact .form-control:hover {
	border: none;
	border-bottom: 2px solid rgba(255, 255, 255, 1);
	-webkit-box-shadow: none;
	        box-shadow: none;
}

.contact .textarea {
	min-height: 100px;
}

.contact label {
	color: #fff;
	font-size: 1.25rem;
}

footer {
	background: #000;
	padding: 50px 0 0;
}

.sci {
	margin: 0;
	padding: 0;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-pack: center;
	    -ms-flex-pack: center;
	        justify-content: center;
	-webkit-box-align: center;
	    -ms-flex-align: center;
	        align-items: center;
}

.sci li {
	list-style: none;
	margin: 0 20px;
}

.sci li a {
	color: #777;
	font-size: 2em;
	-webkit-transition: .5s;
	-o-transition: .5s;
	transition: .5s;
}

.sci li a:hover {
	color: #fff;
}

.cpryt {
	margin-top: 20px;
	text-align: center;
	color: #777;
}

@media (min-width: 992px) {
	.navbar-expand-lg .navbar-nav .nav-link {
		padding-right: 1rem;
		padding-left: 1rem;
	}
}

@media (max-width: 992px) {
	.navbar-light .navbar-toggler {
		background: #fff;
		border-radius: 10px;
	}

	.banner {
		min-height: 100vh;
		padding: 100px 0;
	}

	.contentBox h1,
	.sec2 h2 {
		font-size: 2rem;
	}

	.navbar-expand-lg .navbar-nav .nav-link {
		padding-right: 1rem;
		padding-left: 1rem;
	}

	.sec1 {
		padding: 20px 0;
	}

	.headerText h2 {
		font-size: 2rem;
	}

	.blog {
		padding: 20px 0;
	}

	.blogpost .imgBx {
		height: 200px;
	}

	.contact {
		padding: 20px 0;
	}

	.contact .form-control {
		height: 40px;
		border: 1px solid #fff;
	}

	.btnD1 {
		padding: 10px 40px;
		margin-top: 10px;
	}

	footer {
		background: #000;
		padding: 0px 0 20px;
	}

	.sci li {
		list-style: none;
		margin: 0 10px;
	}

	.sci li a {
		color: #777;
		font-size: 1.5rem;
		-webkit-transition: .5s;
		-o-transition: .5s;
		transition: .5s;
	}

	.sec2 {
		height: auto;
		padding: 40px 0;
	}
}

@media (max-width: 575px) {
	.contentBox h1,
	.sec2 h2 {
		font-size: 2rem;
		font-weight: 400;
	}

	p {
		font-size: .9rem !important;
	}

	.navbar-expand-lg .navbar-nav .nav-link {
		padding-right: 1rem;
		padding-left: 1rem;
	}

	.sec1 {
		padding: 10px 0;
	}

	.placeBox .imgBx {
		width: 90%;
		height: 75%;
		margin: 0 auto;
	}

	.placeBox .imgBx img {
		-o-object-fit: cover;
		   object-fit: cover;
		width: 100%;
		height: 100%;
	}

	.blog {
		padding: 20px 0;
	}

	.blogpost .imgBx {
		height: 200px;
	}

	.contact {
		padding: 20px 0;
	}

	.contact .form-control {
		height: 40px;
		border: 1px solid #fff;
	}

	.btnD1 {
		padding: 10px 40px;
		margin-top: 10px;
	}

	footer {
		background: #000;
		padding: 0px 0 20px;
	}

	.sci li {
		list-style: none;
		margin: 0 10px;
	}

	.sci li a {
		color: #777;
		font-size: 1.5rem;
		-webkit-transition: .5s;
		-o-transition: .5s;
		transition: .5s;
	}

	.sec2 {
		height: auto;
		padding: 40px 0;
	}
}

